{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 15,
  "lineage": "64af6881-b138-3232-385e-0c1fe1bdaca3",
  "resources": [
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9a1912d83ccb785",
            "domain": "vpc",
            "id": "eipalloc-0f9a1912d83ccb785",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-237-131-30.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.131.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nat-eip"
            },
            "tags_all": {
              "Name": "Nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:481665091245:internet-gateway/igw-08f5210e833c7a58b",
            "id": "igw-08f5210e833c7a58b",
            "owner_id": "481665091245",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0958cb3a8ca9e8caf"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9a1912d83ccb785",
            "association_id": "eipassoc-0adf26abb1f84f6b2",
            "connectivity_type": "public",
            "id": "nat-0a2deb17d7bd9ab5d",
            "network_interface_id": "eni-0a560e31a5551e212",
            "private_ip": "10.0.1.222",
            "public_ip": "44.237.131.30",
            "subnet_id": "subnet-01c269adbdaba9420",
            "tags": {
              "Name": "my-nat-gateway"
            },
            "tags_all": {
              "Name": "my-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc_network.aws_eip.nat_eip",
            "module.vpc_network.aws_subnet.public_subnet",
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:481665091245:route-table/rtb-0cadd6c55a9a269cf",
            "id": "rtb-0cadd6c55a9a269cf",
            "owner_id": "481665091245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2deb17d7bd9ab5d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-rt"
            },
            "tags_all": {
              "Name": "my-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0958cb3a8ca9e8caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_eip.nat_eip",
            "module.vpc_network.aws_nat_gateway.nat_gw",
            "module.vpc_network.aws_subnet.public_subnet",
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:481665091245:route-table/rtb-078aeb6c0f3acdfb8",
            "id": "rtb-078aeb6c0f3acdfb8",
            "owner_id": "481665091245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f5210e833c7a58b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-rt"
            },
            "tags_all": {
              "Name": "my-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0958cb3a8ca9e8caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.igw",
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065f6d14d36a4df52",
            "route_table_id": "rtb-0cadd6c55a9a269cf",
            "subnet_id": "subnet-0a556e11605bd4820"
          },
          "dependencies": [
            "module.vpc_network.aws_eip.nat_eip",
            "module.vpc_network.aws_nat_gateway.nat_gw",
            "module.vpc_network.aws_route_table.private_rt",
            "module.vpc_network.aws_subnet.private_subnet",
            "module.vpc_network.aws_subnet.public_subnet",
            "module.vpc_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a49052eb3c52ab8",
            "route_table_id": "rtb-0cadd6c55a9a269cf",
            "subnet_id": "subnet-0a8d40c8758b59487"
          },
          "dependencies": [
            "module.vpc_network.aws_eip.nat_eip",
            "module.vpc_network.aws_nat_gateway.nat_gw",
            "module.vpc_network.aws_route_table.private_rt",
            "module.vpc_network.aws_subnet.private_subnet",
            "module.vpc_network.aws_subnet.public_subnet",
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddba72ca8b9a917d",
            "route_table_id": "rtb-078aeb6c0f3acdfb8",
            "subnet_id": "subnet-01c269adbdaba9420"
          },
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.igw",
            "module.vpc_network.aws_route_table.public_rt",
            "module.vpc_network.aws_subnet.public_subnet",
            "module.vpc_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d5e39ce7a39ceb6",
            "route_table_id": "rtb-078aeb6c0f3acdfb8",
            "subnet_id": "subnet-094910d98adb59e3f"
          },
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.igw",
            "module.vpc_network.aws_route_table.public_rt",
            "module.vpc_network.aws_subnet.public_subnet",
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:481665091245:subnet/subnet-0a556e11605bd4820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a556e11605bd4820",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665091245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-1"
            },
            "tags_all": {
              "Name": "private_subnet-1"
            },
            "vpc_id": "vpc-0958cb3a8ca9e8caf"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:481665091245:subnet/subnet-0a8d40c8758b59487",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d40c8758b59487",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665091245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-2"
            },
            "tags_all": {
              "Name": "private_subnet-2"
            },
            "vpc_id": "vpc-0958cb3a8ca9e8caf"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:481665091245:subnet/subnet-01c269adbdaba9420",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c269adbdaba9420",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665091245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-1"
            },
            "tags_all": {
              "Name": "public_subnet-1"
            },
            "vpc_id": "vpc-0958cb3a8ca9e8caf"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:481665091245:subnet/subnet-094910d98adb59e3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094910d98adb59e3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665091245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-2"
            },
            "tags_all": {
              "Name": "public_subnet-2"
            },
            "vpc_id": "vpc-0958cb3a8ca9e8caf"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:481665091245:vpc/vpc-0958cb3a8ca9e8caf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-079d9ac997944ca06",
            "default_route_table_id": "rtb-0ca68768993c6b282",
            "default_security_group_id": "sg-0f0a93af4368b828c",
            "dhcp_options_id": "dopt-0dc4e8a8bc482fb09",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0958cb3a8ca9e8caf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca68768993c6b282",
            "owner_id": "481665091245",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}